--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light" id="html">
+<html lang="en" class="dark" id="html">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -17,7 +17,7 @@
     />
     <title>To Do App</title>
   </head>
-  <body>
+  <body class="">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
