--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark" id="html">
+<html lang="en" class="light" id="html">
   <head>
     <meta charset="UTF-8" />
     <link
