--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
+      type="image/png"
       sizes="64x64"
       href="/src/assets/Component 1.png"
     />
